--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     </div>
 </div>
 
-    <!-- Подключаем JavaScript модули в правильном порядке -->
+    <!-- Подключаем JS модули в правильном порядке -->
     <script src="js/config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/websocket.js"></script>
