--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         
         <!-- ПАНЕЛЬ УПРАВЛЕНИЯ ОРИЕНТАЦИЕЙ (верхний левый угол) -->
-        <div class="orientation-controls">
+       <!--  <div class="orientation-controls">
             <button class="orientation-btn active" id="btnAuto" title="Автоповорот">
                 <i class="fas fa-sync-alt"></i>
             </button>
@@ -99,7 +99,7 @@
             <button class="orientation-btn" id="btnLandscape" title="Альбомная ориентация">
                 <i class="fas fa-mobile-alt fa-rotate-90"></i>
             </button>
-        </div>
+        </div> -->
         
         <!-- КНОПКА ПОЛНОГО ЭКРАНА (верхний правый угол) -->
         <button class="fullscreen-btn" id="btnFullscreen" title="Во весь экран">
